[tool.poetry]
name = "fuelrod-cli"
version = "1.0.0"
description = ""
authors = ["Sammy Barasa <barsamms@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
#sqlalchemy = "^2.0.16"
mysql = "^0.0.3"
colorlog = "^6.8.0"
typer = {extras = ["all"], version = "^0.9.0"}
python-dotenv = "^1.0.0"
requests = "^2.31.0"
cachetools = "^5.3.2"
sqlalchemy = "^2.0.25"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"
sqlacodegen = "^3.0.0b2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
